# pyft4222

./: .bumpversion.cfg  .gitignore  Justfile  LICENSE  LICENSE.txt  README.md  __init__.py  create_dev_env.sh  dev_requirements.txt  ft4222.py  ft4222_wrapper.py  ft_common.py  ftd2xx_wrapper.py  pyproject.toml  raw_test.py  setup.cfg  test.py
.trunk/: trunk.yaml
examples/: gpio.py  i2c_slave.py  spi_master.py
ft4222/: __init__.py  common.py  ft4222.py  gpio.py  init.py  stream.py
ft4222/i2c/: master.py  slave.py
ft4222/spi/: __init__.py  master.py  slave.py
src/: __init__.py  handle.py
src/ft4222/: gpio.py  stream.py
src/ft4222/i2c/: master.py
src/ft4222/spi/: master.py  slave.py
src/i2c/: slave.py
src/pyft4222/: __init__.py  gpio.py  handle.py  result.py  stream.py
src/pyft4222/_wrapper/: common.py  dll_loader.py  ftd2xx.py  gpio.py
src/pyft4222/_wrapper/i2c/: slave.py
src/pyft4222/_wrapper/spi/: common.py  master.py
src/pyft4222/i2c/: master.py  slave.py
src/pyft4222/spi/: common.py  master.py  slave.py
src/pyft4222/wrapper/: __init__.py  common.py  dll_loader.py  ftd2xx.py  gpio.py
src/pyft4222/wrapper/dll/linux/aarch64/: libft4222.so.1.4.4.188  libft4222.so.1.4.4.232
src/pyft4222/wrapper/dll/linux/amd64/: libft4222.so.1.4.4.188  libft4222.so.1.4.4.232
src/pyft4222/wrapper/dll/osx/amd64/: libft4222.dylib
src/pyft4222/wrapper/dll/osx/universal/: libft4222.1.4.4.190.dylib  libft4222.1.4.4.221.dylib
src/pyft4222/wrapper/i2c/: __init__.py  master.py  slave.py
src/pyft4222/wrapper/spi/: __init__.py  common.py  master.py  slave.py
src/wrapper/: dll_loader.py
src/wrapper/ft4222/: common.py  gpio.py
src/wrapper/ft4222/i2c/: master.py
src/wrapper/ft4222/spi/: master.py
tests/: fixtures.py  raw_test.py  test.py
tests/raw/: test_common.py  test_d2xx.py  test_gpio.py
tests/raw/i2c/: test_i2c_master.py  test_i2c_slave.py
tests/raw/spi/: test_spi_master.py  test_spi_slave.py
wrapper/: __init__.py  dll_loader.py  ftd2xx.py
wrapper/ft4222/: __init__.py  common.py  gpio.py
wrapper/ft4222/i2c/: __init__.py  master.py  slave.py
wrapper/ft4222/spi/: __init__.py  common.py  master.py  slave.py
