[metadata]
name = pyft4222
version = 0.0.1
author = LavovaLampa
author_email = betacheer@gmail.com
description = A python wrapper for libft4222 library
long_description = file: README.md, CHANGELOG.rst, LICENSE.txt
# long_description_content_type = text/markdown
license = MIT License
url = https://github.com/lavovaLampa/pyft4222
project_urls =
    Bug Tracker = https://github.com/lavovaLampa/pyft4222/issues
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS

[options]
zip_safe = False
package_dir = 
    =src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.package_data]
* =
    py.typed
