[metadata]
name = pyft4222
version = 0.0.4
author = Martin Cizmar
author_email = betacheer@gmail.com
description = A python wrapper for libft4222 library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/lavovaLampa/pyft4222
project_urls =
    Bug Tracker = https://github.com/lavovaLampa/pyft4222/issues
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Environment :: Console
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS

[options]
install_requires =
    importlib-resources;python_version<'3.9'
zip_safe = False
package_dir = 
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.package_data]
pyft4222 =
    py.typed
    wrapper/dll/linux/amd64/*
    wrapper/dll/linux/aarch64/*
    wrapper/dll/win/amd64/*
